Revision history for Pod-Readme

v1.1.2 2014-12-09 18:55 GMT
  [Bug Fixes]
  - Regex in changes plugin fixed to work with Perl 5.21 deprecated
    syntax [khwilliamson].

v1.1.1 2014-12-04 13:11 GMT
  [Bug Fixes]
  - The changes plugin will work with Dist::Zilla {{$NEXT}} tokens.

v1.1.0 2014-12-03 19:08 GMT
  [Documentation]
  - Fixed typos in POD for requires plugin.

  [Enhancements]
  - Pod::Readme::Filter has a zilla attribute for Dist::Zilla objects.

  - The requires plugin will use metadata from the Dist::Zilla object
    if it is set, rather than looking for a META.yml file (which will
    not exist, if this is used in a Dist::Zilla plugin).

v1.0.3 2014-11-07 18:58 GMT
  - Fixed bug with minimum version of Class::Method::Modifiers.

v1.0.2 2014-10-13 22:18 BST
  - No changes since v1.0.1_08, just a version bump for a release.

  - See the full list of changes since v1.0.0 for more details.

  [Enhancements]
  - This is a complete rewrite, using modern Perl with Moo.

  - Added support for plugins, along with plugins to insert the module
    version, prerequisites and the latest changes.

  - Added the ability to generate a README in a variety of formats,
    such as POD, Markdown, HTML, RTF, etc.

  - Added command-line options to the pod2readme script, including the
    ability to specify the output format.

  - Switched to semantic versioning.

  - The documentation has been updated accordingly.

  [Incompatabilities]
  - Perl v5.10.1 is required.

  - This is no longer a subclass of a POD parser, although it has some
    wrapper methods for compatability with software known to use it.

v1.0.1_08 2014-10-13
  [Documentation]
  - More documentation tweaks.

v1.0.1_07 2014-10-10 16:47 BST
  [Documentation]
  - More documentation tweaks.

  [Enhancements]
  - Added a depends_on method that returns a list of files that the
    README depends on.

  - Added dependencies_updated method to check if dependencies have
    been updated.
