@@ -174,22 +174,4 @@ sub WriteIO {
     return $type;
 }
 
-=head2 C<DistZilla>
-
-A L<Dist::Zilla> object.
-
-=cut
-
-sub DistZilla {
-    state $type = Type::Tiny->new(
-        name       => 'DistZilla',
-        constraint => sub {
-            blessed($_)
-              && $_->isa('Dist::Zilla');
-        },
-        message => sub { "$_ must be be a Dist::Zilla object" },
-    );
-    return $type;
-}
-
 1;
