@@ -1,5 +1,9 @@
 Revision history for Pod-Readme
 
+  [Incompatabilities]
+  - Removed DistZilla type from Pod::Readme::Types, as it was not
+    necessary.
+
 v1.1.2 2014-12-09 18:55 GMT
   [Bug Fixes]
   - Regex in changes plugin fixed to work with Perl 5.21 deprecated
